Добавил юнит-тесты